--- a/experiments/race/race_hrnet_mse.yaml
+++ b/experiments/race/race_hrnet_mse.yaml
@@ -1,5 +1,5 @@
-GPUS: (0,)
-WORKERS: 4
+GPUS: (0,1,2,3)
+WORKERS: 8
 PRINT_FREQ: 50
 
 DATASET:
@@ -71,7 +71,7 @@ TRAIN:
   END_EPOCH: 60
   RESUME: true
   OPTIMIZER: 'adam'
-  LR: 0.0001
+  LR: 0.0004
   WD: 0.0
   LR_STEP: [30, 50]
   MOMENTUM: 0.0
